[package]
name = "really_bad_fractals"
version = "0.1.0"
authors = ["Derek VerLee <derekverlee@gmail.com>"]
edition = "2018"

[workplace]
[[bin]]
name = "really_bad_fractals"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
png = "0.15.0"
rand = "0.7.2"
#futures = "0.1.29"
threadpool = "1.7.1"
log = "0.4.8"